--- a/ChemEngMaps/ChemEngMaps/MainPage.xaml
+++ b/ChemEngMaps/ChemEngMaps/MainPage.xaml
@@ -10,14 +10,13 @@
         </StackLayout>
 
         <StackLayout x:Name="Buttons" VerticalOptions="StartAndExpand" HorizontalOptions="Fill">
-            <Button x:Name="maps" />
+            <Button x:Name="maps" Clicked="maps_Clicked"/>
             <Button x:Name="profs"  />
             <Button x:Name="rooms" />
             <Button x:Name="creds" />
         </StackLayout>
         <StackLayout VerticalOptions="EndAndExpand">
             <Image x:Name="Footer" HorizontalOptions="CenterAndExpand" Source="footerimg.png" />
-
         </StackLayout>
         </StackLayout>
 
